unifi-controller/namespace.yaml
# k8s-version: 1.20
apiVersion: v1
kind: Namespace
metadata:
  name: unifi-controller
  labels:
    istio-injection: enabled
