unifi-controller/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: lb-unifi
  namespace: unifi-controller
spec:
  ports:
    - name: '8080'
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: '8443'
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: '8843'
      protocol: TCP
      port: 8843
      targetPort: 8843
    - name: '8880'
      protocol: TCP
      port: 8880
      targetPort: 8880
    - name: '6789'
      protocol: TCP
      port: 6789
      targetPort: 6789
  selector:
    name: unifi-ctrl
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: lb-unifi-udp
  namespace: unifi-controller
spec:
  ports:
    - name: '3478'
      protocol: UDP
      port: 3478
      targetPort: 3478
  selector:
    name: unifi-ctrl
  type: ClusterIP
